[gd_scene load_steps=71 format=2]

[ext_resource path="res://Worker/Worker.gd" type="Script" id=1]
[ext_resource path="res://Worker/Idle/front/26.png" type="Texture" id=2]
[ext_resource path="res://Area_Objects/Scan_Area.tscn" type="PackedScene" id=3]
[ext_resource path="res://Area_Objects/Gatherer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Area_Objects/Gatherer.gd" type="Script" id=5]
[ext_resource path="res://Area_Objects/Selectable.tscn" type="PackedScene" id=6]
[ext_resource path="res://Area_Objects/Visibility.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/DE/Schöne-Grüße.wav" type="AudioStream" id=8]
[ext_resource path="res://Worker/Idle/front/28.png" type="Texture" id=9]
[ext_resource path="res://Worker/Idle/front/29.png" type="Texture" id=10]
[ext_resource path="res://Worker/Idle/front/30.png" type="Texture" id=11]
[ext_resource path="res://Worker/Idle/front/32.png" type="Texture" id=12]
[ext_resource path="res://Worker/Idle/front/31.png" type="Texture" id=13]
[ext_resource path="res://Worker/Idle/front/34.png" type="Texture" id=14]
[ext_resource path="res://Worker/Idle/front/33.png" type="Texture" id=15]
[ext_resource path="res://Worker/Idle/front/36.png" type="Texture" id=16]
[ext_resource path="res://Worker/Idle/front/35.png" type="Texture" id=17]
[ext_resource path="res://Worker/Idle/front/39.png" type="Texture" id=18]
[ext_resource path="res://Worker/Idle/front/37.png" type="Texture" id=19]
[ext_resource path="res://Worker/Idle/front/38.png" type="Texture" id=20]
[ext_resource path="res://Worker/Idle/front/4.png" type="Texture" id=21]
[ext_resource path="res://Worker/Idle/front/12.png" type="Texture" id=22]
[ext_resource path="res://Worker/Idle/front/14.png" type="Texture" id=23]
[ext_resource path="res://Worker/Idle/front/13.png" type="Texture" id=24]
[ext_resource path="res://Worker/Idle/front/16.png" type="Texture" id=25]
[ext_resource path="res://Worker/Idle/front/15.png" type="Texture" id=26]
[ext_resource path="res://Worker/Idle/front/40.png" type="Texture" id=27]
[ext_resource path="res://Worker/Idle/front/18.png" type="Texture" id=28]
[ext_resource path="res://Worker/Idle/front/17.png" type="Texture" id=29]
[ext_resource path="res://Worker/Idle/front/20.png" type="Texture" id=30]
[ext_resource path="res://Worker/Idle/front/21.png" type="Texture" id=31]
[ext_resource path="res://Worker/Idle/front/19.png" type="Texture" id=32]
[ext_resource path="res://Worker/Idle/front/22.png" type="Texture" id=33]
[ext_resource path="res://Worker/Idle/front/25.png" type="Texture" id=34]
[ext_resource path="res://Worker/Idle/front/27.png" type="Texture" id=35]
[ext_resource path="res://Worker/Idle/front/23.png" type="Texture" id=36]
[ext_resource path="res://Worker/Idle/front/24.png" type="Texture" id=37]
[ext_resource path="res://Worker/Idle/front/5.png" type="Texture" id=38]
[ext_resource path="res://Worker/Idle/front/11.png" type="Texture" id=39]
[ext_resource path="res://Worker/Idle/front/7.png" type="Texture" id=40]
[ext_resource path="res://Worker/Idle/front/8.png" type="Texture" id=41]
[ext_resource path="res://Worker/Idle/front/9.png" type="Texture" id=42]
[ext_resource path="res://Worker/Idle/front/10.png" type="Texture" id=43]
[ext_resource path="res://Worker/Idle/front/2.png" type="Texture" id=44]
[ext_resource path="res://Worker/Idle/front/3.png" type="Texture" id=45]
[ext_resource path="res://Worker/Idle/front/1.png" type="Texture" id=46]
[ext_resource path="res://Worker/Idle/front/6.png" type="Texture" id=47]
[ext_resource path="res://Worker/right/WALK/5.png" type="Texture" id=48]
[ext_resource path="res://Worker/right/WALK/10.png" type="Texture" id=49]
[ext_resource path="res://Worker/right/WALK/6.png" type="Texture" id=50]
[ext_resource path="res://Worker/right/WALK/7.png" type="Texture" id=51]
[ext_resource path="res://Worker/right/WALK/8.png" type="Texture" id=52]
[ext_resource path="res://Worker/right/WALK/9.png" type="Texture" id=53]
[ext_resource path="res://Worker/right/WALK/2.png" type="Texture" id=54]
[ext_resource path="res://Worker/right/WALK/3.png" type="Texture" id=55]
[ext_resource path="res://Worker/right/WALK/4.png" type="Texture" id=56]
[ext_resource path="res://Worker/right/WALK/1.png" type="Texture" id=57]
[ext_resource path="res://Worker/right/WALK/10_1.png" type="Texture" id=58]
[ext_resource path="res://Worker/right/MINE/8.png" type="Texture" id=59]
[ext_resource path="res://Worker/right/MINE/4.png" type="Texture" id=60]
[ext_resource path="res://Worker/right/MINE/9.png" type="Texture" id=61]
[ext_resource path="res://Worker/right/MINE/3.png" type="Texture" id=62]
[ext_resource path="res://Worker/right/MINE/7.png" type="Texture" id=63]
[ext_resource path="res://Worker/right/MINE/6.png" type="Texture" id=64]
[ext_resource path="res://Worker/right/MINE/5.png" type="Texture" id=65]
[ext_resource path="res://Worker/SmallShadow.png" type="Texture" id=66]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 46 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 21 ), ExtResource( 38 ), ExtResource( 47 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 39 ), ExtResource( 22 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 34 ), ExtResource( 2 ), ExtResource( 35 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 27 ) ],
"loop": true,
"name": "IDLE",
"speed": 8.0
}, {
"frames": [ ExtResource( 57 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ) ],
"loop": false,
"name": "TURN_RIGHT",
"speed": 15.0
}, {
"frames": [ ExtResource( 62 ), ExtResource( 60 ), ExtResource( 65 ), ExtResource( 64 ), ExtResource( 63 ), ExtResource( 59 ), ExtResource( 61 ) ],
"loop": true,
"name": "MINE_RIGHT",
"speed": 9.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 58 ), ExtResource( 49 ), ExtResource( 48 ) ],
"loop": true,
"name": "WALK_RIGHT",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 0.736174
height = 2.28118

[sub_resource type="CircleShape2D" id=3]
radius = 2.66113

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27.7915, 27.3946 )

[node name="Worker" type="KinematicBody2D" groups=[
"minimap_objects",
]]
position = Vector2( -0.20379, -5.91329 )
scale = Vector2( 2, 2 )
collision_layer = 260
collision_mask = 351
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
team_no = 1

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.166542, 1.74869 )
scale = Vector2( 0.02, 0.02 )
frames = SubResource( 1 )
animation = "MINE_RIGHT"
frame = 3

[node name="Shadow" type="Sprite" parent="."]
position = Vector2( 0.224357, 5.39704 )
scale = Vector2( 0.321943, 0.386134 )
texture = ExtResource( 66 )

[node name="World_collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5.34886 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="Selectable" parent="." instance=ExtResource( 6 )]

[node name="CollisionPolygon2D" parent="Selectable" index="0"]
position = Vector2( 0.153028, 1.65271 )
polygon = PoolVector2Array( -0.574805, 3.20308, -0.922976, 3.34968, -0.959626, 1.77375, -1.17952, -0.058733, -1.43607, 0.619285, -1.54602, 2.25019, -1.69262, 0.655934, -1.79938, -1.68946, -0.360909, -1.84249, -0.483181, -2.31268, 0.451384, -2.38598, 0.710292, -1.75068, 1.90392, -1.59765, 1.47757, 2.34182, 1.14773, 1.7371, 0.982803, 2.06694, 0.872855, 2.83659, 0.707931, 3.368, 0.35976, 1.97532, -0.171659, 1.8837, -0.391557, 2.47009 )

[node name="Scan_Area" parent="." instance=ExtResource( 3 )]
visible = false
collision_mask = 83

[node name="Gatherer" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 0
script = ExtResource( 5 )

[node name="CollisionShape2D" parent="Gatherer" index="0"]
position = Vector2( 0, 5.77722 )
shape = SubResource( 3 )

[node name="Combat" parent="." instance=ExtResource( 7 )]
collision_layer = 8
collision_mask = 8

[node name="CollisionPolygon2D" parent="Combat" index="0"]
polygon = PoolVector2Array( -3.35556, 5.69305, -0.274554, 8.64915, 3.55589, 5.94286, 0.308339, 3.19494 )

[node name="Area_Availability" type="Area2D" parent="."]
visible = false
position = Vector2( 22.2482, 19.7175 )
collision_layer = 0
collision_mask = 343

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_Availability"]
position = Vector2( 9.44661, 13.5053 )
shape = SubResource( 4 )

[node name="Health" type="ColorRect" parent="."]
margin_left = -4.95087
margin_top = -3.94624
margin_right = 5.04913
margin_bottom = -3.44624
rect_clip_content = true
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hello" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
area_mask = 0

[node name="IDLE_Timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Resource_Timer" type="Timer" parent="."]
[connection signal="mouse_entered" from="Selectable" to="." method="_on_Selectable_mouse_entered"]
[connection signal="mouse_exited" from="Selectable" to="." method="_on_Selectable_mouse_exited"]
[connection signal="area_entered" from="Scan_Area" to="." method="_on_Worker_Scan_area_entered"]
[connection signal="area_exited" from="Scan_Area" to="." method="_on_Worker_Scan_area_exited"]
[connection signal="area_entered" from="Gatherer" to="." method="_on_Gatherer_area_entered"]
[connection signal="area_exited" from="Gatherer" to="." method="_on_Gatherer_area_exited"]
[connection signal="area_entered" from="Combat" to="." method="_on_Combat_area_entered"]
[connection signal="area_exited" from="Combat" to="." method="_on_Combat_area_exited"]
[connection signal="area_entered" from="Area_Availability" to="." method="_on_Area_Availability_area_entered"]
[connection signal="area_exited" from="Area_Availability" to="." method="_on_Area_Availability_area_exited"]
[connection signal="timeout" from="IDLE_Timer" to="." method="_on_IDLE_Timer_timeout"]
[connection signal="timeout" from="Resource_Timer" to="." method="_on_Resource_Timer_timeout"]

[editable path="Selectable"]

[editable path="Scan_Area"]

[editable path="Gatherer"]

[editable path="Combat"]
